--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,90 @@
         <title>Dashboard</title>
         <meta name="viewport" content="width=device-width" , initial-scale="1.0">
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="dashboard.css">
     </head>
     <body>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="#" class="logo">
+                      <img src="Coat of arms.png" alt="">
+                      <span class="nav-item">Dashboard</span>  
+                    </a></li>
+                    <li><a href="landingpage.html">
+                        <i class="fas fa-home"></i>
+                        <span class="nav-item">Home</span>
+                    </a></li>
+                    <li><a href="gradereport.html">
+                        <i class="fas fa-user"></i>
+                        <span class="nav-item">Grade Report</span>
+                    </a></li>
+                    <li><a href="">
+                        <i class="fas fa-wallet"></i>
+                        <span class="nav-item">Profile</span>
+                    </a></li>
+                    <li><a href="">
+                        <i class="fas fa-chart-bar"></i>
+                        <span class="nav-item">analysis</span>
+                    </a></li>
+                    <li><a href="">
+                        <i class="fas fa-tasks"></i>
+                        <span class="nav-item">Tasks</span>
+                    </a></li>
+                    <li><a href="">
+                        <i class="fas fa-cog"></i>
+                        <span class="nav-item">Settings</span>
+                    </a></li>
+                    <li><a href="contact.html">
+                        <i class="fas fa-questions-circle"></i>
+                        <span class="nav-item">Help</span>
+                    </a></li>
+                    <li><a href="login.html" class="logout">
+                         <i class="fas fa-sign-out-alt"></i>
+                        <span class="nav-item">Logout</span>
+                    </a></li>
+                </ul>
+            </nav>
+
+            <section class="main">
+                <div class="main-top">
+                    <h1>Skills</h1>
+                    <i class="fas fa-user-cog">
+                    </i>
+                </div>
+                <div class="main-skills">
+                    <div class="card">
+                        <i class="fas fa-laptop-code"></i>
+                        <h3>DCIT 111</h3>
+                        <p>Still not done yet</p>
+                        <button>Get Started</button>
+                    </div>
+                </div>
+                <div class="main-skills">
+                    <div class="card">
+                        <i class="fas fa-laptop-code"></i>
+                        <h3>DCIT 111</h3>
+                        <p>Stil oo</p>
+                        <button>Get Started</button>
+                    </div>
+                </div>
+                <div class="main-skills">
+                    <div class="card">
+                        <i class="fas fa-laptop-code"></i>
+                        <h3>DCIT 111</h3>
+                        <p>Im Not done yet</p>
+                        <button>Get Started</button>
+                    </div>
+                </div>
+                <div class="main-skills">
+                    <div class="card">
+                        <i class="fas fa-laptop-code"></i>
+                        <h3>DCIT 222</h3>
+                        <p>Im not done yet</p>
+                        <button>Get Started</button>
+                    </div>
+                </div>
+            </section>
+        </div>
     </body>
 </html>
