--- a/gradereport.html
+++ b/gradereport.html
@@ -6,6 +6,11 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <header>
+            <nav>
+                <a href="dashboard.html"><button>Back To Dashboard</button></a>
+            </nav>
+        </header>
         <div class="container">
             <h1>GRADE REPORT 2023</h1>
             <p>Web Results</p>
@@ -137,6 +142,22 @@ th{
     padding: 0px 37px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+    
+    button {
+    padding: 1rem 3rem;
+    font-size: 1rem;
+    border-radius: 25px;
+    color:#f2f2f2;
+    background-color:blanchedalmond;
+    cursor: pointer;
+}
 
-td
+button:hover{
+    transform: scale(1.2);
+    background-color: transparent;
+    color: #ffcc74;
+    transition: .4s;
+    cursor: pointer;
+}
+
 </style>
